--- a/database/master/mysql-master.yml
+++ b/database/master/mysql-master.yml
@@ -1,23 +1,26 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: mysql-slave
+ name: mysql-master
   labels:
-    name: mysql-slave
+    name: mysql-master
 spec:
   replicas: 1
   selector:
-    name: mysql-slave
+    name: mysql-master
   template:
     metadata:
       labels:
-        name: mysql-slave
+        name: mysql-master
     spec:
       containers:
-        - name: slave
-          image: mysql-slave:0.1
+        - name: master
+          image: paulliu/mysql-master:0.1
           ports:
             - containerPort: 3306
+          volumeMounts:
+            - name: mysql-data
+              mountPath: /var/lib/mysql
           env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
@@ -33,3 +36,8 @@ spec:
               valueFrom:
                 secretKeyRef:
                   key: MYSQL_REPLICATION_PASSWORD
+                  name: db-secrets
+      volumes:
+        - name: mysql-data
+          hostPath:
+            path: /var/lib/mysql
