--- a/database/slave/mysql-slave.yml
+++ b/database/slave/mysql-slave.yml
@@ -1,26 +1,23 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
- name: mysql-master
+  name: mysql-slave
   labels:
-    name: mysql-master
+    name: mysql-slave
 spec:
   replicas: 1
   selector:
-    name: mysql-master
+    name: mysql-slave
   template:
     metadata:
       labels:
-        name: mysql-master
+        name: mysql-slave
     spec:
       containers:
-        - name: master
-          image: paulliu/mysql-master:0.1
+        - name: slave
+          image: paulliu/mysql-slave:0.1
           ports:
             - containerPort: 3306
-          volumeMounts:
-            - name: mysql-data
-              mountPath: /var/lib/mysql
           env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
@@ -36,7 +33,4 @@ spec:
               valueFrom:
                 secretKeyRef:
                   key: MYSQL_REPLICATION_PASSWORD
-      volumes:
-        - name: mysql-data
-          hostPath:
-            path: /var/lib/mysql
+                  name: db-secrets
