--- a/database/master/mysql-master.yml
+++ b/database/master/mysql-master.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
- name: mysql-master
+  name: mysql-master
   labels:
     name: mysql-master
 spec:
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: master
-          image: mysql-master:0.1
+          image: 'mysql-master:0.1'
           ports:
             - containerPort: 3306
           volumeMounts:
