--- a/database/slave/mysql-slave.yml
+++ b/database/slave/mysql-slave.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: slave
-          image: mysql-slave:0.1
+          image: 'mysql-slave:0.1'
           ports:
             - containerPort: 3306
           env:
